--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@ a{text-decoration: none; color: white}
 
 
 
+
+
 .KEA{ grid-row: 1;
       grid-column: 1;
       color: white;
@@ -50,7 +52,27 @@ a{text-decoration: none; color: white}
 .scroll{grid-row: 3;
         grid-column: 3;
         margin-top: 40px;
-        color: white}
+        color: white;
+				animation: jump 1s alternate infinite;
+	}
+
+@keyframes jump{
+
+            to{
+                transform: translateY(-35px);
+            }
+        }
+.slideshow-button:hover{
+
+	color:#ea5045;
+	transition: 0.5s linear;
+
+}
+
+.slideshow-button{
+
+	transition: 0.5s linear;
+}
 
 .main-title{
 font-size: 7px;
@@ -113,7 +135,14 @@ font-size: 7px;
 .slideshow-title{
 	font-size: 72px;
 	text-align: center;
-    margin-bottom: 40px
+    margin-bottom: 40px;
+	transition: 0.5s linear;
+
+}
+
+.slideshow-title:hover{
+	font-size:96px;
+	transition: 1s linear;
 
 }
 
@@ -147,15 +176,39 @@ font-size: 7px;
             grid-template-rows: 1fr 1fr 1fr 1fr;
              height: 100vh;}
 
-.box{display: grid;
+.box{
+display: grid;
 grid-template-columns: 1fr;
-grid-template-rows: 1fr 1fr 1fr 1fr;}
+grid-template-rows: 1fr 1fr 1fr 1fr;
+animation: slide-down 1s normal;
+}
+
+@keyframes slide-down{
+	from{
+		transform: translateY(2500px);
+
+	}
+
+	to{
+		transform: translateY(0px;)
+	}
+}
+
+
 
 .semester-title{   grid-row: 1;
                    grid-column: 1;
                    color: white;
                    z-index: 1;
                   font-size: 20px;
+                  margin-top: 50px;
+                  margin-left: 15px;}
+
+.mainpage-title{   grid-row: 1;
+                   grid-column: 1;
+                   color: white;
+                   z-index: 1;
+                  font-size: 25px;
                   margin-top: 20px;
                   margin-left: 15px;}
 
@@ -255,6 +308,12 @@ grid-template-rows: 1fr 1fr 1fr 1fr;}
                  grid-template-rows: 300px 300px 300px 300px 300px 300px;
 
   }
+
+	.slide-number{
+		text-align: center;
+		font-size: 4px !important;
+	}
+
     .box-one{
              grid-row: 1;
             grid-column: 1;}
@@ -347,3 +406,28 @@ grid-template-rows: 1fr 1fr 1fr 1fr;}
  	cursor: pointer;
 }
 
+.modal-title{
+	margin: 2em;
+    font-size: 36px;
+}
+
+.modal-subtitle{
+	margin: 3em;
+    font-size: 25px;
+
+}
+
+.modal-text{
+			max-width: 500px;
+	    margin: 2em 4.5em;
+}
+
+.close-text{
+	text-decoration: underline;
+	cursor: pointer;
+}
+
+.modal-ects{
+	    font-size: 36px;
+    margin: 1em 2em;
+}
