--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ a{text-decoration: none; color: white}
 
 .preload-text{
 
-
+	font-size:24px;
 	position: fixed;
 	width: 100%;
 	height: 100%;
@@ -118,6 +118,17 @@ a{text-decoration: none; color: white}
 	top:20%;
 
 }
+
+.main-description{
+	width: 100%;
+	text-align: center;
+	grid-column: 1/-1;
+	color: white;
+	font-size: 24px;
+	position: absolute;
+	top:80%;
+
+}
 .Curriculum{grid-row: 1;
             grid-column: 1;
             margin-top: 38px;
@@ -125,10 +136,10 @@ a{text-decoration: none; color: white}
             font-size: 18px;
             color: white}
 .line{}
-.brice{width: 95%;
+.main-chart{width: 95%;
        grid-column: 2/4;
        grid-row: 2;
-       margin-top: 30px
+       margin-top: 100px
    }
 .text-brice{width: 100%;
             grid-row: 2;
