--- a/style.css
+++ b/style.css
@@ -20,6 +20,84 @@ a{text-decoration: none; color: white}
 
 }
 
+/*SEMESTER PANELS FLEX*/
+.panels {
+      min-height:100vh;
+      overflow: hidden;
+      display: flex;
+
+    }
+
+.panel-text{
+	font-weight: 400;
+	font-size:1em;
+	max-width: 350px;
+}
+
+.panel-box{
+	/*
+	margin-bottom: 400px !important;*/
+
+}
+
+.panel1{
+	background-color: #5CB1C8 ;
+}
+
+.panel2{
+	background-color: #6ECEB2;
+}
+
+.panel3{background-color: #56C271;
+}
+
+.panel4{
+
+	background-color: #EBD757;
+
+}
+
+.panel5{
+
+	background-color: #FF671F;
+
+}
+
+.panel6{
+
+	background-color: #EA5045;
+
+}
+
+    .panel {
+      color:white;
+      text-align: center;
+      align-items:center;
+      /* Safari transitionend event.propertyName === flex */
+      /* Chrome + FF transitionend event.propertyName === flex-grow */
+      transition:
+        font-size 0.7s cubic-bezier(0.61,-0.19, 0.7,-0.11),
+        flex 0.7s cubic-bezier(0.61,-0.19, 0.7,-0.11),
+        background 0.2s;
+      font-size: 20px;
+      background-size:cover;
+      background-position:center;
+      flex: 1;
+      justify-content: center;
+      display: flex;
+      flex-direction: column;
+    }
+
+		.panel > * {
+      width: 100%;
+      transition:transform 0.5s;
+    }
+
+		.panel.open {
+      flex: 5;
+      font-size:24px;
+    }
+
 /*PRELOAD SCREEN*/
 
 .preload-text{
@@ -300,7 +378,7 @@ animation: slide-down 1s normal;
                    z-index: 1;
                   font-size: 20px;
                   margin-top: 50px;
-                  margin-left: 15px;}
+                  }
 
 .mainpage-title{   grid-row: 1;
                    grid-column: 1;
@@ -308,8 +386,15 @@ animation: slide-down 1s normal;
                    z-index: 1;
                   font-size: 25px;
                   margin-top: 20px;
-                  margin-left: 15px;}
+                 }
 
+.page-navigation-arrow{
+	font-size: 32px;
+    color: white;
+    margin: 0.5em;
+	margin-left: 0.7em;
+	position: fixed;
+}
 
 .box-one{background-color: #5CB1C8;
         grid-column: 1;
@@ -355,9 +440,10 @@ animation: slide-down 1s normal;
       margin-left: auto;
       margin-right: auto;}
 
-.numbers{ margin-left: 50px;
+.numbers{ margin-left: -150px;
            font-size: 1.3em;
-           opacity: 0.6;}
+           opacity: 0.6;
+						display: inline-block;}
 
 .item-one{grid-row: 2;}
 
@@ -381,7 +467,12 @@ animation: slide-down 1s normal;
              text-align: center;
             color: white;}
 
-
+.page-navigation{
+	margin:1em;
+	margin-left:4em;
+	position: fixed;
+	text-decoration: underline;
+}
 
 /* Media queries Phone*/
 @media  (max-width: 650px) {
